Upmood Bug Fixes: E018, E024, E015 E017. Updated scrollbar issue in messages sent.

--- a/resources/assets/sass/_global.scss
+++ b/resources/assets/sass/_global.scss
@@ -94,6 +94,10 @@
 
 // END FOR TABLES
 
+pre{
+  white-space: pre-wrap;
+}
+
 .content-center{
 	display: block;
 	margin: 0 auto;
